fix margins on smaller viewports

--- a/DElectronic/DElectonic/src/Components/Footer/Footer.module.css
+++ b/DElectronic/DElectonic/src/Components/Footer/Footer.module.css
@@ -74,6 +74,6 @@
         height: 150vh;
         margin-top: 0;
         background-color: var(--blue);
-        margin-top: 50px;
+        margin-top: 0px;
     }
 }
